--- a/src/style.scss
+++ b/src/style.scss
@@ -225,12 +225,12 @@ body {
   }
 }
 
-.open-windows-list {
+.taskbar-windows-list {
   padding-right: 20px;
   display: flex;
 }
 
-.open-window-entry {
+.taskbar-window-entry {
   padding: 5px 10px;
   background: linear-gradient(180deg, #0997ff, #0053ee 8%, #0050ee 40%, #06f 88%, #06f 93%, #005bff 95%, #003dd7 96%, #003dd7);
   ;
