--- a/src/index.scss
+++ b/src/index.scss
@@ -12,7 +12,7 @@ code {
     monospace;
 }
 
-body, html, #root, .dragSpace,.dragSpace > div, .screenCanvas {
+body, html, #root, .dragSpace,.dragSpace > div, .screenCanvas, .react-grid-layout.layout{
   height: 100%;
   width: 100%;
 }
