--- a/src/style.scss
+++ b/src/style.scss
@@ -569,6 +569,7 @@ body {
     height: 40px;
   }
 
+
   .menu-item {
     margin-top: 10px;
     font-size: 14px;
@@ -594,4 +595,8 @@ body {
 }
 .desktop-icon-image{
   pointer-events: none;
+}
+.desktop-icon-selected img{
+  filter: sepia(20%) hue-rotate(190deg) saturate(800%) brightness(120%);
+
 }
