--- a/src/style.scss
+++ b/src/style.scss
@@ -209,7 +209,7 @@ body {
     padding: 0;
     width: 100%;
     text-align: left;
-    background-color: transparent;
+    background-image: none;
     border: none;
     font-weight: bold;
     cursor: pointer;
@@ -217,6 +217,7 @@ body {
     height: 32px;
     vertical-align: middle;
     padding-right: 5px;
+    min-width: 24px;
 
     img {
       margin: auto;
