--- a/src/components/apps/explorer/ExplorerWindow.scss
+++ b/src/components/apps/explorer/ExplorerWindow.scss
@@ -11,3 +11,11 @@
   display: flex;
   flex-grow: 1;
 }
+.explorer-menu-item-right{
+  float: right;
+  background-image: url("/images/apps/explorer/top-menu-win.png");
+  width: 39px;
+  height: 22px;
+  border-left: 1px solid #DAD2BB;
+  border-bottom: 1px solid #DAD2BB;
+}
